<?xml version="1.0"?>
<package format="2">
  <name>intraprocess</name>
  <version>0.0.0</version>
  <description>The intraprocess package</description>
  <maintainer email="dbt@todo.todo">dbt</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pluginlib</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>nodelet</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>pluginlib</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
	 <nodelet plugin="${prefix}/intraprocess_publish.xml" />
	 <nodelet plugin="${prefix}/intraprocess_subscribe.xml" />
  </export>
</package>
